--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -11,7 +11,7 @@
     <div id="feature-menu">
       <a href="/our-work">Our Work</a>
       <a href="/roofing" class="roof-estimate">Roof Estimate</a>
-      <a href="https://www.acornfinance.com/apply/?d=HG2WM#/">Apply for a Loan</a>
+      <a href="https://www.acornfinance.com/apply/?d=HG2WM#/" target="_blank">Apply for a Loan</a>
     </div>
     <div id="feature-menu-2">
       <a href="/contact-us">Contact Us</a>
