--- a/css/our-work.css
+++ b/css/our-work.css
@@ -6,18 +6,15 @@
   }
   
   .our-work-images {
-    /* display: flex; */
     margin-bottom: 10%;
+    display: flex;
+    flex-wrap: wrap;
   }
-  
-  /* .our-work-image img {
-    object-fit: cover;
-  } */
   
   .our-work-image {
     margin: 1%;
-    /* max-width: 280px; */
     max-height: 300px;
+    width: 48%;
   }
   
   /*!
