--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -354,7 +354,7 @@
         display: none;
       }
       .our-work-accordion img {
-        width: 100%;
+        width: 100%!important;
         padding-left: 0;
       }
   }
