--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -362,7 +362,7 @@
   @media (max-width: 1600px) {
     .our-work-accordion img {
         width: 45%;
-        height: 400px;
+        height: 400px!important;
         object-fit: cover;
     }
     #feature-menu {
