update our work images

--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -369,3 +369,9 @@
         display: none;
       }
   }
+
+  .our-work-accordion img {
+    width: 45%;
+    height: 400px;
+    object-fit: cover;
+}
