--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -75,7 +75,9 @@
   
   @media (max-width: 992px) {
     .our-work-image {
-      max-width: 47.75%;
+        max-width: 47.75%;
+        height: 250px;
+        object-fit: cover;
     }
     .subpage-content {
       margin: 25% auto 0 auto!important;
