--- a/templates/footer.html
+++ b/templates/footer.html
@@ -35,6 +35,7 @@
     <li><a href="/decks">Decks</a></li>
     <li><a href="/pergolas">Pergolas</a></li>
     <li><a href="/siding">Siding</a></li>
+    <li><a href="/gutters">Gutters</a></li>
   </ul>
   </div>
   <div class="footer-column">
