--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -40,6 +40,7 @@
             <a href="/deck-pergolas">Decks</a>
             <a href="/pergolas">Pergolas</a>
             <a href="/siding">Siding</a>
+            <a href="/gutters">Gutters</a>
           </div>
           <a href="#" id="collapse-toggle-shed">Shed Homes<span class="fa fa-angle-double-right" aria-hidden="true"></span></a>
           <div id="collapsed-menu-shed">
