--- a/css/service-subpages.css
+++ b/css/service-subpages.css
@@ -46,7 +46,7 @@
     background-position: top;
   }
 
-  .hero-nav.deck {
+  .hero-nav.gutters {
     background-image: url(https://teambuilders-media.s3.us-east-2.amazonaws.com/work/gutters/gutter-hero.jpg);
     background-position: top;
   }
