smooth out page load

--- a/css/home.css
+++ b/css/home.css
@@ -13,6 +13,10 @@
       height: 100vh;
       background: transparent;
   }
+  #main-content img {
+    height: 100vh;
+    background: transparent;
+}
   #main-nav-logo {
     padding: 0 35px;
     text-align: center;
