--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -1,6 +1,10 @@
 @media (min-width: 768px) and (max-width: 992px) {
+    #main-content-service-selector {
+        flex-direction: column;
+    }
     #main-content-service-selector > div {
-      width: 93%;
+      width: 32.5%;
+      margin: 2.5% auto;
     }
     [id^="main-content-service-cards"] {
         margin-top: -17.5
