--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -11,6 +11,8 @@
     }
     .service-card {
       height: 75%;
+      width: 100%;
+      margin: 0 10px;
     }
     #footer-container {
       padding: 8% 5%;
@@ -23,9 +25,6 @@
     }
     #main-content-service-selector-wrapper {
       top: 75vh!important;
-    }
-    .service-card {
-      margin: 0 10px;
     }
   }
 
