clean up page load

--- a/css/home.css
+++ b/css/home.css
@@ -216,6 +216,8 @@
     width: 100%;
     object-fit: cover;
   }
+  /*  */
+
   
   nav {
     width: 100%;
@@ -227,8 +229,8 @@
     z-index: 1000;
     margin: 0 auto;
     background-color: #fff;
-      /* box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 14px 2px; */
   }
+
   .home nav {
     top: 62px;
     margin: 20px auto;
