--- a/css/footer.css
+++ b/css/footer.css
@@ -54,6 +54,10 @@
   footer #mc_embed_signup input.email {
       width: 95%!important;
       background: transparent!important;
-      border: 1px solid #666!important;
+      border: 1px solid #dadce0!important;
       font-family: 'PT Sans', sans-serif;
+  }
+
+  footer #mc_embed_signup input::placeholder {
+      color: #dadce0;
   }
