--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;500;600;700&display=swap');
 /* GLOBAL */
+@font-face {
+    font-display: swap;
+}
 * {
     font-family: 'PT Sans', sans-serif;
   }
@@ -216,11 +218,15 @@
   }
   #main-content img {
     height: 100vh;
+    width: 100%;
     background: transparent;
+    object-fit: cover;
 }
   #main-nav-logo {
     padding: 0 35px;
     text-align: center;
+    width: 250px;
+    height: 50px;
   }
   
   #feature-menu, #feature-menu-2 {
