--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,10 +1,10 @@
 <div id="main-nav-logo">
     <a href="/"><img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/team-builders-logo.png" alt="Team Builders Limited Logo"></a>
     <div id="social-menu">
-        <a href="https://www.facebook.com/teambuilderslimited/"><span class="fa fa-facebook" aria-hidden="true"></span></a>
-        <a href="https://www.pinterest.com/teambuilders0087/"><span class="fa fa-pinterest" aria-hidden="true"></span></a>
-        <a href="https://www.instagram.com/teambuilderslimited/"><span class="fa fa-instagram" aria-hidden="true"></span></a>
-        <a href="https://www.youtube.com/channel/UCq7x6SEpZcGiF68RuVP7B-g/videos"><span class="fa fa-youtube-play" aria-hidden="true"></span></a>
+        <a href="https://www.facebook.com/teambuilderslimited/" title="Facebook"><span class="fa fa-facebook" aria-hidden="true"></span></a>
+        <a href="https://www.pinterest.com/teambuilders0087/" title="Pinterest"><span class="fa fa-pinterest" aria-hidden="true"></span></a>
+        <a href="https://www.instagram.com/teambuilderslimited/" title="Instagram"><span class="fa fa-instagram" aria-hidden="true"></span></a>
+        <a href="https://www.youtube.com/channel/UCq7x6SEpZcGiF68RuVP7B-g/videos" title="Youtube"><span class="fa fa-youtube-play" aria-hidden="true"></span></a>
         </div>
   </div>
   <div id="main-menu-container">
