--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -11,14 +11,14 @@
 
     <div id="feature-menu">
         <a href="/our-work">Our Work</a>
-        <a href="/contact-us">Contact Us</a>    
     </div>
     <div id="feature-menu-2">
         <a href="/roofing" class="roof-estimate">Roof Estimate</a>
         <a href="https://www.acornfinance.com/apply/?d=HG2WM#/" target="_blank">Apply for a Loan</a>
         <a href="/insurance-claims" class="insurance-claims">Insurance Claims</a>  
-      <a href="tel:3194818326" class="phone-number"> (319) 481-8326 </a>
+        <a href="tel:3194818326" class="phone-number"> (319) 481-8326 </a>
     </div>
+    <a href="/contact-us" class="btn btn-secondary" id="contact-feature">Contact Us</a>    
     <script src="https://apps.elfsight.com/p/platform.js" defer></script>
     <div class="elfsight-app-f4d6485e-4d7d-4d31-a35e-2a08784256cc"></div>
 
