--- a/templates/footer.html
+++ b/templates/footer.html
@@ -61,9 +61,9 @@
 <div id="sub-footer-container">
   <p>Copyright &copy; 2021 T.E.A.M. Builders Ltd.</p>
   <p>
-    <a href="https://www.facebook.com/teambuilderslimited/" title="Facebook"><span class="fa fa-facebook" aria-hidden="true"></span></a>
-    <a href="https://www.pinterest.com/teambuilders0087/" title="Pinterest"><span class="fa fa-pinterest" aria-hidden="true"></span></a>
-    <a href="https://www.instagram.com/teambuilderslimited/" title="Instagram"><span class="fa fa-instagram" aria-hidden="true"></span></a>
-    <a href="https://www.youtube.com/channel/UCq7x6SEpZcGiF68RuVP7B-g/videos" title="Youtube"><span class="fa fa-youtube-play" aria-hidden="true"></span></a>
+    <a href="https://www.facebook.com/teambuilderslimited/" title="Facebook" target="_blank"><span class="fa fa-facebook" aria-hidden="true"></span></a>
+    <a href="https://www.pinterest.com/teambuilders0087/" title="Pinterest" target="_blank"><span class="fa fa-pinterest" aria-hidden="true"></span></a>
+    <a href="https://www.instagram.com/teambuilderslimited/" title="Instagram" target="_blank"><span class="fa fa-instagram" aria-hidden="true"></span></a>
+    <a href="https://www.youtube.com/channel/UCq7x6SEpZcGiF68RuVP7B-g/videos" title="Youtube" target="_blank"><span class="fa fa-youtube-play" aria-hidden="true"></span></a>
   </p>
 </div>
