--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,10 +1,10 @@
 <div id="main-nav-logo">
     <a href="/"><img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/team-builders-logo.png" alt="Team Builders Limited Logo"></a>
     <div id="social-menu">
-        <a href="https://www.facebook.com/teambuilderslimited/" title="Facebook"><span class="fa fa-facebook" aria-hidden="true"></span></a>
-        <a href="https://www.pinterest.com/teambuilders0087/" title="Pinterest"><span class="fa fa-pinterest" aria-hidden="true"></span></a>
-        <a href="https://www.instagram.com/teambuilderslimited/" title="Instagram"><span class="fa fa-instagram" aria-hidden="true"></span></a>
-        <a href="https://www.youtube.com/channel/UCq7x6SEpZcGiF68RuVP7B-g/videos" title="Youtube"><span class="fa fa-youtube-play" aria-hidden="true"></span></a>
+        <a href="https://www.facebook.com/teambuilderslimited/" title="Facebook" target="_blank"><span class="fa fa-facebook" aria-hidden="true"></span></a>
+        <a href="https://www.pinterest.com/teambuilders0087/" title="Pinterest" target="_blank"><span class="fa fa-pinterest" aria-hidden="true"></span></a>
+        <a href="https://www.instagram.com/teambuilderslimited/" title="Instagram" target="_blank"><span class="fa fa-instagram" aria-hidden="true"></span></a>
+        <a href="https://www.youtube.com/channel/UCq7x6SEpZcGiF68RuVP7B-g/videos" title="Youtube" target="_blank"><span class="fa fa-youtube-play" aria-hidden="true"></span></a>
         </div>
   </div>
   <div id="main-menu-container">
@@ -16,9 +16,11 @@
         <a href="/roofing" class="roof-estimate">Roof Estimate</a>
         <a href="https://www.acornfinance.com/apply/?d=HG2WM#/" target="_blank">Apply for a Loan</a>
         <a href="/insurance-claims" class="insurance-claims">Insurance Claims</a>  
+    </div>
+    <div id="feature-menu-3">
+        <a href="/contact-us" class="btn btn-secondary" id="contact-feature">Contact Us</a>    
         <a href="tel:3194818326" class="phone-number"> (319) 481-8326 </a>
     </div>
-    <a href="/contact-us" class="btn btn-secondary" id="contact-feature">Contact Us</a>    
     <script src="https://apps.elfsight.com/p/platform.js" defer></script>
     <div class="elfsight-app-f4d6485e-4d7d-4d31-a35e-2a08784256cc"></div>
 
