--- a/css/main.css
+++ b/css/main.css
@@ -206,15 +206,13 @@
     padding: 0 35px;
   }
   
-  #feature-menu, #feature-menu-2 {
+  #feature-menu, #feature-menu-2, #feature-menu-3 {
     display: flex;
     align-items: center;
   }
   
   #feature-menu-3 {
-      display: flex;
       flex-direction: column;
-      justify-content: center;
       text-align: center;
   }
 
