--- a/templates/footer.html
+++ b/templates/footer.html
@@ -53,7 +53,7 @@
     <li><a href="/shed-homes-shouses">Shed Homes "Shouses"</a></li>
     <li><a href="/our-work">Our Work</a></li>
     <li><a href="/process">Our Process</a></li>
-    <li><a href="/contactus">Contact Us</a></li>
+    <li><a href="/contact-us">Contact Us</a></li>
     <li><a href="https://www.google.com/search?q=teambuilderslimited&rlz=1C1CHBF_enUS691US691&oq=team_builders_limited&aqs=chrome..69i57j0j69i60l4.6122j0j7&sourceid=chrome&ie=UTF-8#lrd=0x87f0001c6a61c2ef:0x4a6e6a79368ff93e,3,,,"  target="_blank">Leave a Review<span class="fa fa-google"></a></li>
   </ul>
   </div>
