--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -68,4 +68,4 @@
     </div>
     <button class="openbtn"><img src="images/home/menu.png"></button>
   </div>
-  <script src="js/script.js"></script>
+  <script src="js/script.min.js"></script>
