--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -17,7 +17,7 @@
         <a href="/insurance-claims" class="insurance-claims">Insurance Claims</a>  
     </div>
     <div id="feature-menu-3">
-        <a href="/contact-us" class="btn btn-secondary" id="contact-feature">Contact Us</a> 
+        <a href="/contact-us" class="btn btn-secondary uppercase" id="contact-feature">Contact Us</a> 
         <a href="tel:3194818326" class="phone-number"> (319) 481-8326 </a>
     </div>
     <script src="https://apps.elfsight.com/p/platform.js" defer></script>
