--- a/css/main.css
+++ b/css/main.css
@@ -160,7 +160,6 @@
   
     /* Buttons */
     .btn {
-      border-radius: 0;
       padding: 10px 25px;
       transition: 0.3s ease-in-out all;
       display: inline-block;
@@ -168,6 +167,7 @@
     
     .btn:hover {
       cursor: pointer;
+      transform: scale(1.05);
     }
     
     .btn-primary {
@@ -177,9 +177,15 @@
     }
     
     .btn-secondary {
+      padding: 10px 25px;
       color: #3f9e00;
       border: 2px solid #fff;
       background: #fff;
+      transition: 0.3s ease-in-out all;
+    }
+    .btn-secondary:hover {
+      cursor: pointer;
+      transform: scale(1.05);
     }
 /* ------ */
 /* HOME   */
@@ -1218,9 +1224,12 @@
     
     .gradient-banner a {
       font-size: 16px;
-      text-align: center;
-      padding: 15px 25px;
       text-transform: uppercase;
+    }
+
+    .gradient-banner .phone {
+        color: #fff;
+        text-decoration: underline;
     }
     
     .triangle {
@@ -1322,8 +1331,7 @@
   }
 
   
-  footer #mc_embed_signup input.email {
-      width: 95%!important;
+  #mc_embed_signup input.email {
       background: transparent!important;
       border: 1px solid #666!important;
       font-family: 'PT Sans', sans-serif;
