increase size of social icons

--- a/css/main.css
+++ b/css/main.css
@@ -156,6 +156,7 @@
     
     .fa-youtube-play, .fa-instagram, .fa-facebook, .fa-pinterest {
         color: #3f9e00;
+        font-size: 20px;
     }
   
     /* Buttons */
