--- a/css/main.css
+++ b/css/main.css
@@ -188,6 +188,18 @@
       cursor: pointer;
       transform: scale(1.05);
     }
+
+    .btn-outline {
+        padding: 10px 25px;
+        color: #3f9e00;
+        border: 2px solid #3f9e00;
+        background: #fff;
+        transition: 0.3s ease-in-out all;
+      }
+      .btn-outline:hover {
+        cursor: pointer;
+        transform: scale(1.05);
+      }
 /* ------ */
 /* HOME   */
 /* Alert Section */
@@ -860,7 +872,6 @@
   }
   
   .our-work-image {
-    margin: 1%;
     width: 48%;
     max-height: 400px;
     object-fit: cover;
@@ -1711,6 +1722,7 @@
     .our-work-image {
       width: 100%;
       max-height: none;
+      margin: 1% 0;
     }
     .testimonial-container {
       padding-top: 10%;
@@ -1720,7 +1732,7 @@
       margin-bottom: 25%;
     }
     .col img {
-      width: 90%!important;
+      width: 100%!important;
     }
     .feature-container .feature {
       width: 75%;
@@ -1763,6 +1775,9 @@
       #footer-container {
         flex-direction: column;
         text-align: center;
+      }
+      #mc_embed_signup_scroll {
+        align-items: center;
       }
   }
 
@@ -1812,3 +1827,94 @@
 #main-menu-container .btn {
     font-size: 14px;
 }
+
+.pb-0 {
+    padding-bottom: 0;
+}
+
+.pt-0 {
+    padding-top: 0;
+}
+
+/* .stick {
+    transition: 0.3s ease-in-out all;
+}
+
+.stick {
+    position: fixed;
+    top: 100px;
+    z-index: 999;
+    background: white;
+    width: 100%;
+    left: 0;
+}
+
+.stick .btn-outline {
+    padding: 3.5px 15px;
+    margin: 2px;
+} */
+
+.active {
+    background-color: #3f9e00;
+    color: #fff;
+}
+
+.filter-all, .filter-all button {
+    width: 100%;
+}
+
+.filter-all a {
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+}
+
+.filter-by {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    justify-self: center;
+    width: 100%;
+}
+
+.filter-by .btn {
+    flex-grow: 1;
+    width: 17.5%;
+    margin: 2.5px;
+}
+  
+  
+  .filter-btns {
+    padding: 2px 0;
+    text-align: center
+  }
+  .gallery {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      margin-bottom: 10%;
+  }
+  
+  .gallery a img {
+    width: 95%;
+    height: auto;
+    float: left;
+    margin-bottom: 12px;
+  }
+
+
+  .gallery a {
+    /* transition: all 0.3s; */
+    display: block;
+    float: left;
+    opacity: 1;
+    height: auto;
+    display: flex;
+    justify-content: center;
+  }
+  
+  .gallery .hide {
+    width: 0%;
+    opacity: 0;
+    /* transition: all 0.2s; */
+  }
