--- a/css/main.css
+++ b/css/main.css
@@ -1387,7 +1387,29 @@
     }
   }
 
-  
+  @media (min-width: 992px) {
+    .stick {
+        transition: 0.4s ease-in-out all;
+    }
+    
+    .stick {
+        position: fixed;
+        top: 100px;
+        z-index: 999;
+        background: white;
+        width: 100%;
+        left: 0;
+    }
+    
+    .stick .btn-outline {
+        padding: 2px 15px;
+        margin: 2px;
+    }
+    
+    .stick ~ .gallery {
+        margin-top: 150px;
+    }
+  }
   
   @media (min-width: 768px) {
     /* Nav */
@@ -1836,27 +1858,7 @@
     padding-top: 0;
 }
 
-.stick {
-    transition: 0.4s ease-in-out all;
-}
 
-.stick {
-    position: fixed;
-    top: 100px;
-    z-index: 999;
-    background: white;
-    width: 100%;
-    left: 0;
-}
-
-.stick .btn-outline {
-    padding: 2px 15px;
-    margin: 2px;
-}
-
-.stick ~ .gallery {
-    margin-top: 150px;
-}
 
 .active {
     background-color: #3f9e00;
