add garages page

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -38,11 +38,12 @@
   </ul>
   </div>
   <div class="footer-column">
-  <h4>Shed Homes</h4>
+  <h4>New Construction</h4>
   <ul>
     <li><a href="/shed-houses-shouses">Shed Houses "Shouses"</a></li>
     <li><a href="/agriculture-commercial-buildings">Agricultural & Commercial Buildings</a></li>
     <li><a href="/event-venues">Event Venues</a></li>
+    <li><a href="/garages">Garages</a></li>
   </ul>
   </div>
   <div class="footer-column">
@@ -50,7 +51,6 @@
   <ul>
     <li><a href="/interior-remodeling">Interior Remodeling</a></li>
     <li><a href="/exterior-remodeling">Exterior Remodeling</a></li>
-    <li><a href="/shed-homes-shouses">Shed Homes "Shouses"</a></li>
     <li><a href="/our-work">Our Work</a></li>
     <li><a href="/process">Our Process</a></li>
     <li><a href="/contact-us">Contact Us</a></li>
