footer form updates

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -42,6 +42,7 @@
                 <a href="/pergolas">Pergolas</a>
                 <a href="/siding">Siding</a>
                 <a href="/gutters">Gutters</a>
+                <a href="/garages">Garages</a>
             </div>
             <a href="#" id="collapse-toggle-shed">Shed Homes<span class="fa fa-angle-double-right" aria-hidden="true"></span></a>
             <div id="collapsed-menu-shed">
