--- a/css/main.css
+++ b/css/main.css
@@ -156,7 +156,7 @@
     
     .fa-youtube-play, .fa-instagram, .fa-facebook, .fa-pinterest {
         color: #3f9e00;
-        font-size: 20px!important;
+        font-size: 22px!important;
     }
   
     /* Buttons */
@@ -1324,8 +1324,7 @@
   }
   
   #sub-footer-container span {
-    margin: 1%;
-    font-size: 24px;
+    margin: 15px;
   }
   
   footer #mc_embed_signup label {
