--- a/css/main.css
+++ b/css/main.css
@@ -483,6 +483,7 @@
       right: 30px;
       font-size: 24px;
       margin-left: 40px;
+      padding-left: 0;
     }
     
     .sidebar .closebtn {
