--- a/css/main.css
+++ b/css/main.css
@@ -1705,7 +1705,7 @@
       top: 50vh;
     }
     .openbtn, .closebtn {
-        padding: 0 50px;
+        padding: 0 50px 0 0;
     }
     .subpage-content {
       margin: 40% auto 0 auto!important;
